bin_PROGRAMS = slim conv_il

slim_SOURCES = main.c membrane.c rule.c alloc.c error.c  read_il.c task.c memory_pool.c internal_hash.c \
	vector.c dumper.c system_ruleset.c atom.c \
	atom.h dumper.h instruction.h internal_hash.h lmntal.h membrane.h \
	memory_pool.h rule.h system_ruleset.h task.h vector.h 

conv_il_SOURCES = conv_il.c 
